2005-05-18  Juanma Barranquero  <lekktu@gmail.com>

	* subr.el (window-dot, set-window-dot, read-input, send-string)
	(send-region, show-buffer, eval-current-buffer):
	Make really obsolete, as the comment says.

2005-05-17  Kim F. Storm  <storm@cua.dk>

	* emulation/cua-base.el (cua-use-hyper-key): Doc fix.
	(cua--init-keymaps): Bind C-return instead of S-return to set
	rectangle mark.

	* emulation/cua-rect.el (cua--init-rectangles): Bind C-return
	instead of S-return to toggle/clear rectangle mark.

2005-05-17  Daniel Pfeiffer  <occitan@esperanto.org>

	* progmodes/make-mode.el (makefile-dependency-skip): New variable.
	(makefile-macroassign-regex, makefile-make-font-lock-keywords):
	Also fontify plain strings assigned to variables, mostly so that a
	colon has a face and is thus not taken as a dependency separator.
	(makefile-previous-dependency): Inline the new matcher, because it
	is too complex to work in both directions.
	(makefile-match-dependency): Eliminate `backward' arg (see above).
	Completely reimplemented so as to not sometimes go into an endless
	loop.  It should also be more efficient, because first it only
	searches for `:', instead of applying the very complex regexp.
	(makefile-mode): Cancel `font-lock-support-mode', because blocks
	to be fontified in one piece can be too long for JIT.  Makefiles
	are never *that* big.

2005-05-17  Reiner Steib  <Reiner.Steib@gmx.de>

	* dired.el (dired-mode): Simplify.

2005-05-17  Lute Kamstra  <lute@gnu.org>

	* emacs-lisp/easy-mmode.el (define-minor-mode): Don't generate a
	defcustom for the mode hook variable.

	* emacs-lisp/authors.el (authors): Do parse the ChangeLogs of the
	Emacs Lisp Reference Manual.

2005-05-17  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/cl.el (eql, floatp-safe, plusp, minusp, oddp)
	(evenp, list*):
	* emacs-lisp/cl-macs.el (macrolet, symbol-macrolet):
	* emacs-lisp/cl-seq.el (subsetp, tree-equal): Doc fixes.

	* net/tramp-smb.el (tramp-smb-open-connection):